fixtures/typescript/fallback/should_fail/catchReturnDefault.ts
function getData() {
  try {
    return fetchData();
  } catch (e) {
    return [];
  }
}
